@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-# SNMPTT v1.3beta1
+# SNMPTT v1.3beta2
 #
 # Copyright 2002-2009 Alex Burger
 # alex_b@users.sourceforge.net
@@ -47,7 +47,7 @@
 #
 use strict;
 
-my $snmptt_version = "v1.3beta1";
+my $snmptt_version = "v1.3beta2";
 
 sub showversion
 {
