@@ -1,5 +1,5 @@
 #
-# SNMPTT v1.2 Configuration File
+# SNMPTT v1.3beta2 Configuration File
 #
 # Windows NT
 #
