@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-# SNMPTTCONVERT v1.2
+# SNMPTTCONVERT v1.3beta2
 #
 # Copyright 2002-2007 Alex Burger
 # alex_b@users.sourceforge.net
