@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-# SNMPTTHANDLER-E v1.3beta1
+# SNMPTTHANDLER-E v1.3beta2
 #
 # Copyright 2009 Alex Burger
 # alex_b@users.sourceforge.net
